# qSlides

./: .gitignore  CMakeLists.txt  README.md  qSlides.pro
cmake/: set_cxx_norm.cmake
cmake/Modules/: FindPoppler.cmake
forms/: controlWindow.ui  mainWindow.ui  presentationWindow.ui  startWindow.ui
src/: ControlWindow.cpp  ControlWindow.h  IDocumentModel.cpp  IDocumentModel.h  MainWindow.cpp  MainWindow.h  PdfModel.cpp  PdfModel.h  PresentationController.cpp  PresentationController.h  PresentationWindow.cpp  PresentationWindow.h  SlideWindow.cpp  SlideWindow.h  StartWindow.cpp  StartWindow.h  main.cpp
